# search_through_pdf

./: main.py  pyproject.toml  requirment.txt
notebook/: document.ipynb
